<resources>
    <string name="app_name">Froome</string>
    <string name="title_activity_main">Christopher Froome</string>
    <string name="title_bio">Bio</string>
    <string name="title_palmares">Palmarés</string>
    <string name="title_galeria">Galeria</string>
    <string name="options_HowFarFroomeIs">Where he lives?</string>
    <string name="options_twitter">Twitter</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bio">
        Christopher "Chris" Froome, nascido e criado na capital do Quénia, Nairobi, é considerado um dos ciclistas mais capacitados da atualidade embora tenha chegado um pouco tarde ao ciclismo profissional
        e ainda demorou a mostrar o potencial que muitos lhe viam associado.
        \nFroome nasceu no Quênia para pais britânicos e cresceu lá e na África do Sul.
        Desde 2011 ele tem sido um residente no Mónaco . Com 22 anos,
        Froome tornou-se profissional com a Team Konica Minolta. Em 2008,
        ele juntou-se à equipe Barloworld . Nesse mesmo ano ele mudou-se para
        Itália e começou a passeio sob uma licença britânica. Em 2010, mudou-se
        para a Team Sky e desde então se tornou um dos ciclistas chave da equipa.
        Froome fez sua descoberta como um Grand Tour candidato durante a Vuelta a
        España 2011 , onde terminou em segundo lugar geral, mais tarde promovido a
        primeiro (Desclassificação por Doping de Cobo). No Tour de France 2012, corria como um super-domestique,
        para Bradley, isto é um elemento de trabalho para o seu líder
        Wiggins , Froome ganhou sete etapas e terminou em segundo lugar na geral, atrás de
        Wiggins.
        \nEle ganhou a etapa 15 do Tour de France 2013, considerada uma das mais míticas subidas
        dessa prova, após 242,5 km, os últimos 20 sempre a subir com chgeada em alto.
        No final agarrou-se de imediato a uma máscara de oxigénio.</string>

    <string name="bio2"> No Tour de France 2014 , desistiu após várias falhas.
        Em 2015, ele ganhou o seu segundo Critérium du Dauphiné e seu segundo
        Tour de France.
        \nEle ganhou o seu terceiro Tour de France em 2016 e tornou-se o
        primeiro homem desde Miguel Indurain, em 1995, para defender com sucesso seu
        título. Ele ganhou o seu quarto Tour de France em 2017, seguido por várias vitórias
        sucessivas na edição 2017 da Vuelta a España e 2018 do Giro dItalia , suas primeiras
        vitórias em ambas as corridas.
        \nEstas conquistas fez dele o primeiro ciclista a
        vencer o Tour-Vuelta no mesmo ano desde que a Vuelta foi transferido para setembro, foi
        também o primeiro ciclista a conquistar todos os três Grand Tours no
        mesmo ano desde a época de Bernard Hinault em 1983.</string>

    <string name="dscr_bio">Etapa Rainha Giro de Itália 2018</string>

    <string name="vitorias">2005 - Tour of Mauritius - 1st stage 2\n
        2006 - Tour of Mauritius - 2 stage wins\n
        2007 - Tour of Japan - 1st stage 6\n
        2007 - Tour of Japan - 1st stage 6\n
        2009 - Giro del Capo II - 1st overall\n
        2011 - Tour of Beijing - 3rd overall\nVuelta a Espana - 1st overall\n
    </string>

    <string name="vitorias2"> 2012 - Tour de France - 2nd overall - one stage win\n
        2013 - Tirreno-Adriatico - 1st stage 4\n
        Criterium International - 1st overall - one stage win\n
        Tour de Romandie - 1st overall - one stage win\n
        Criterium du Dauphine - 1st overall - one stage win\n
        Tour de France - 1st overall - 3 stage wins\n
        2014 - Tour of Oman - 1st overall - one stage win\n
        Tour de Romandie - 1st overall - one stage win\n
        Criterium du Dauphine - 2 stage wins\n
        Vuelta a Espana - 2nd overall\n
        2015 - Ruta del Sol - 1st overall - one stage win\n
        Criterium du Dauphine - 1st overall - 2 stage wins\n
        Tour de France - 1st overall - 1st Mountains Classification - one stage win\n
    </string>

    <string name="vitorias3">
        2016 - Herald Sun Tour - 1st overall - 1st stage 4\n
        Criterium du Dauphine - 1st overall - 1st stage 5\n
        Tour de France - 1st overall - 2 stage wins\n
        Olympic Games Time Trial - 3rd overall\n
        Vuelta a Espana - 2nd overall - 2 stage wins\n
    </string>

    <string name="vitorias4"> 2017 - Tour de France - 1st overall\n
        Vuelta a Espana - 1st overall - 2 stage wins - 1st points jersey\n
        2018 - Giro dItalia - 1st overall - 2 stages\n
        Tour de France - 3rd overall\n
        Em 2019 Froome teve um acidente e não consegiu recupearar a tempo de participar na Volta a França. Contudo este enconotra-se bastante ativo
        nos dias que correm e espera brevemente voltar à competição. Em tempos de pandemia Froome está isolado em sua casa no Monaco e treina
        apenas indoor, para isso utiliza os seus rolos e o ginásio que construir na sua garagem.</string>

    <string name="ProCyclingStats">ProCyclingStats</string>
    <string name="Giro">
        &quot;It will be remembered as one of the most sensational days in Grand Tour history.
        \nChris Froome was 3 minutes 22 seconds behind Simon Yates in the pursuit of the maglia rosa leading up to stage 19 of the 2018 Giro d’Italia.
        \nThe Colle delle Finestre, an 18.5km climb sat in the middle of the stage, was the only realistic option to attack the leaders with only two stages to follow.
        \nThe stage was set for an unbelievable comeback and one of the strongest rides you’re likely to see for years to come.
        \nHere Chris explains what it took to pull off such a staggering attack.&quot;</string>

    <string name="momentoInsolito">Estavamos em 2016 onde Thomas de Gendt venceu a 12.ª etapa da Volta a França, mas este dia ficou marcado pela queda de Froome, que teve de correr para chegar à meta e perdeu, à conta disso, a camisola amarela.
        Mais tarde, o júri decidiu em seu favor e o britânico mantém a liderança na geral.
        \nO que ficou na memória dos espectadores é a intervenção do público na geral,
        devido ao fraco controlo por parte da organização.
        \nChris Froome (Sky) atacou na última subida e com ele seguiram Richie Porte (BMC) e Bauke Mollema
        (Trek), sendo que Nairo Quintana (Movistar) não conseguiu acompanhar o ritmo. Mas já na aproximação à meta os três ciclistas acabaram
        por ser vítimas de um percalço.
        \nA multidão ocupou parcialmente a estrada e obrigou à travagem súbita
        de uma moto da organização, na tentativa de evitar a colisão com os espectadores. Froome, Mollema e
        Porte não conseguiram parar a tempo e chocaram com o veículo. Richie Porte caiu mas conseguiu seguir viagem.
        \nJá Froome ficou com a bicicleta partida a escassas centenas de metros do final e começou a correr monte Ventoux acima.
        O britânico, que envergava a camisola amarela, voltou a pedalar com uma bicicleta cedida pela organização, mas os encaixes dos sapatos não eram compatíveis com os pedais.
        \nFroome foi ultrapassado por um grupo onde seguia o colombiano Nairo Quintana, entre outros nomes importantes do Tour.
A menos de 300 metros do final acabou por receber uma segunda bicicleta, desta feita já pelo carro de assistência da sua equipa, mas só chegou cruzou a linha final depois de todos os favoritos</string>

    <string name="froomeDocumentario">ITV - Sports Life Stories: Chris Froome (2015)
        Kenyan-born cyclist Chris Froome recounts the remarkable story of how he became only the
        second British winner of the Tour De France. With unique access to Froome at home in
        South Africa, we gain a new insight into his fierce rivalry with teammate Sir Bradley Wiggins,
        and discover how he overcame personal tragedy to win one of the most demanding sporting events in the world.
        With contributions from Sir Dave Brailsford and David Walsh</string>

    <string name="title_activity_froome_city">Map</string>


    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
</resources>
