<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.froome.Fragmentos.Bio"
        android:label="@string/title_bio"
        tools:layout="@layout/fragment_bio" />

    <fragment
        android:id="@+id/navigation_palmares"
        android:name="com.example.froome.Fragmentos.Palmares"
        android:label="@string/title_palmares"
        tools:layout="@layout/fragment_palmares" />

    <fragment
        android:id="@+id/navigation_galeria"
        android:name="com.example.froome.Fragmentos.Galeria"
        android:label="@string/title_galeria"
        tools:layout="@layout/fragment_galeria" />
</navigation>
