<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmentos.Galeria">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/titulo1"
                android:layout_width="411dp"
                android:layout_height="27dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/aclonica"
                android:singleLine="true"
                android:text="Giro de Itália 2018"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/youtube_player_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="231dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:autoPlay="false"
                app:layout_constraintBottom_toTopOf="@+id/tituloGiro"
                app:layout_constraintTop_toBottomOf="@+id/titulo1"
                app:layout_constraintTop_toTopOf="parent"
                app:showFullScreenButton="false"
                app:videoId="mccKzTdfXts" />

            <TextView
                android:id="@+id/tituloGiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/average_sans"
                android:text="@string/Giro"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintBottom_toTopOf="@+id/titulo2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/youtube_player_view" />

            <TextView
                android:id="@+id/titulo2"
                android:layout_width="411dp"
                android:layout_height="27dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/aclonica"
                android:singleLine="true"
                android:text="CHRIS FROOME - MELHORES MOMENTOS"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/youtube_player_view2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tituloGiro" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view2"
                android:layout_width="match_parent"
                android:layout_height="231dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:autoPlay="false"
                app:layout_constraintBottom_toTopOf="@+id/titulo3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titulo2"
                app:showFullScreenButton="false"
                app:videoId="o3xPRJEXDYk" />

            <TextView
                android:id="@+id/titulo3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/aclonica"
                android:singleLine="true"
                android:text="UM MOMENTO INESQUECÍVEL"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/momentoInsolito"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/youtube_player_view2" />

            <TextView
                android:id="@id/momentoInsolito"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:fontFamily="@font/average_sans"
                android:text="@string/momentoInsolito"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titulo3" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:videoId="UBDsrQrGeoI"
                app:autoPlay="false"
                app:showFullScreenButton="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/momentoInsolito"/>

            <TextView
                android:id="@+id/titulo4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/aclonica"
                android:singleLine="true"
                android:text="Sports Life Stories: Chris Froome"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/documentario"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/youtube_player_view3" />

            <TextView
                android:id="@+id/documentario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:fontFamily="@font/average_sans"
                android:text="@string/froomeDocumentario"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titulo4" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:videoId="8nyTHrto-0k"
                app:autoPlay="false"
                app:showFullScreenButton="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/documentario"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>